# TIClust

./: CHANGELOG.md  README.md  pyproject.toml  setup.py  simple_tic.py  tic_helper.py
.github/workflow/: test_release_workflow.yml
.github/workflows/: test_release_workflow.yml  version_release_workflow.yml
src/: simple_tic.py  tic_helper.py
src/simple_tic/: cli.py  simple_tic.py
src/tic/: __main__.py  cli.py  core_api.py  install_hooks.py  simple_tic.py
src/ticlust/: __init__.py  core_api.py  ticlust.py
test/: Mixed_kingdoms_1K_V3-V4_sequences.fasta  imngs2_job_84_head_tail_1000.fasta  input_sequences_first1000.fasta  pytest.ini  simple_tic_test.py  small-test_tic_analysis.fasta  ticlust_test.py
