[build-system]
requires = ["setuptools>=42", "wheel", "requests"]
build-backend = "setuptools.build_meta"

[project]
name = "tic"
version = "0.2"
description = "A description of your project"
authors = [
    { name = "Your Name", email = "your.email@example.com" }
]
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.6"
dependencies = [
    "requests",
    "toml",
]

[project.urls]
homepage = "https://example.com"
repository = "https://github.com/yourusername/yourproject"

[project.scripts]
simpletic = "tic.cli:main"

[tool.setuptools]
packages = { find = { where = ["src"] } }

[tool.setuptools.package-data]
"tic" = ["bin/vsearch"]

[tool.setuptools.cmdclass]
install = "tic.install_hooks.CustomInstall"
