[build-system]
requires = ["setuptools>=42", "wheel", "requests"]
build-backend = "setuptools.build_meta"

[project]
name = "tic"
version = "1.0.0"
description = "Taxonomy Informed Clustering (TIC) is a tool for clustering bacterial sequences based on their taxonomy and hypothetically complete taxonomy levels."
authors = [
    { name = "Mohsen Pourjam", email = "pourjam.cs@hotmial.com" },
    { name = "Ilias Lagkouvardos", email = "ilias.lagkouvardos@gmail.com" }
]
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.6"
dependencies = [
    "requests",
    "toml",
]

[project.urls]
repository = "https://github.com/MPourjam/SimpleTIC"


[project.urls]
homepage = "https://example.com"
repository = "https://github.com/yourusername/yourproject"

[project.scripts]
simpletic = "tic.cli:main"

[tool.setuptools]
packages = { find = { where = ["src"] } }

[tool.setuptools.package-data]
"tic" = ["bin/vsearch"]

[tool.setuptools.cmdclass]
install = "tic.install_hooks.CustomInstall"
